# Demo-WASM

./: README.md  sdlhello.cc
hello-cpp/: hello.cpp  run.sh
hello-rust/: Cargo.toml  build.sh
wat/: adder.wat  build.sh  runwasm.js
