[package]
name = "hello-rust"
version = "0.1.0"
authors = ["Ted Neward <ted@tedneward.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/tedneward/Demo-WASM"
edition = "2025"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
